--- a/css/style.css
+++ b/css/style.css
@@ -856,9 +856,7 @@ nav ul li a:hover:after{
 }
 
 
-#testimonial-part .overlay .testimonial-slider {
-    margin-top: 90px;
-}
+
 
 #testimonial-part .overlay .testimonial-slider .testi-img{
     width: 120px;
@@ -867,7 +865,7 @@ nav ul li a:hover:after{
     background: #cccccc;
     border: 0;
     position: relative;
-    margin-bottom: 85px;
+    margin: 20px 0;
     transition: .4s;
     margin-left: 16px;
 
@@ -906,7 +904,7 @@ nav ul li a:hover:after{
 	left: 79px;
 	border: 1px solid white;
 	color: white;
-	top: -24%;
+	top: -15%;
 } 
 
 #testimonial-part .up:hover{
@@ -918,7 +916,7 @@ nav ul li a:hover:after{
 	left: 79px;
 	border: 1px solid white;
 	color: white;
-	bottom: -12%;
+	bottom: -16%;
 }
 
 #testimonial-part .down:hover{
@@ -930,7 +928,7 @@ nav ul li a:hover:after{
 	background: white;
 	position: absolute;
 	left: 153px;
-	top: 153px;
+	top: 140px;
 }
 
 #testimonial-part .margin-alignment{
