--- a/css/responsive.css
+++ b/css/responsive.css
@@ -25,6 +25,14 @@
         margin: 0 auto;
     }
 
+    nav ul li .active{
+        display: none;
+    }
+
+    nav ul li .active:after{
+        width: 0;
+    }
+
     nav ul li a:hover::after{
         width: 0;
     }
@@ -528,6 +536,14 @@
     }
 
     nav ul li a:hover::after{
+        width: 0;
+    }
+
+    nav ul li .active{
+        display: none;
+    }
+
+    nav ul li .active:after{
         width: 0;
     }
 
@@ -1041,7 +1057,11 @@
 
 
     nav ul li a:hover::after{
-        width: 75%;
+        width: 70%;
+    }
+
+    nav ul li .active::after{
+        width: 70%;
     }
 
     /*  nav part end */
